add GWT